# magwitch

./: .gitignore  Makefile  README.mkd  setup.cfg
test/: test_api.py  test_bool_extraction.py
