[metadata]
name = magwitch
version = 0.1.0
description = Decorator for your functions, for easy tune of boolean arguments
long_description = file: README.mkd
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/magwitch
license = MIT
keywords = decorator, bool, arguments, helper
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[options]
include_package_data = False
py_modules = magwitch
